Bug 122623 - [GTK3] Extra tab with a down arrow in options that can't be clicked on.
Summary: [GTK3] Extra tab with a down arrow in options that can't be clicked on.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.1 rc
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2019-01-10 06:09 UTC by Hussam Al-Tayeb
Modified: 2019-01-17 12:42 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
notice the extra tab on the top right. (51.46 KB, image/png)
2019-01-10 06:09 UTC, Hussam Al-Tayeb
Details
How it looks in LibreOffice 6.3 Master with gtk 3.18.9 (46.71 KB, image/png)
2019-01-17 12:38 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hussam Al-Tayeb 2019-01-10 06:09:47 UTC
Created attachment 148196 [details]
notice the extra tab on the top right.

In Writer, right click on the text area and select "Paragraph" -> "Paragraph...".
Notice the extra tab with a symbol pointing down at the top right.
Comment 1 Xisco Faulí 2019-01-10 11:24:36 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=bf379a1054bdf84fc05550e5b9e600b50e04769e

author	Caolán McNamara <caolanm@redhat.com>	2018-12-06 17:44:16 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2018-12-09 20:28:32 +0100
commit bf379a1054bdf84fc05550e5b9e600b50e04769e (patch)
tree 8a69abcb0d223554209730c7ed90f29bf1441b51
parent 53a29871800c5b520767e18c1e3f10c4d5c4852e (diff)
Related: tdf#120371 a scheme to provide multi-level notebook tabs

Bisected with: bibisect-linux64-6.3

Adding Cc: to Caolán McNamara
Comment 2 Caolán McNamara 2019-01-10 15:52:18 UTC
well, its there on purpose as an artefact of splitting the notebook to form two notebooks, done because no one was completely happy with any of the GtkNotebook built-in overflow mechanisms. I'm not entirely sure what better solution I can manufacture at this point
Comment 3 Hussam Al-Tayeb 2019-01-10 16:22:05 UTC
Tabs with "<" and ">" buttons at the edges received low reviews?
Comment 4 Caolán McNamara 2019-01-11 13:18:48 UTC
yeah, the major issue seems to be that all tabs are not visible at the same time. Putting the tab down the left when they overflow only works until there are too many to fit down the left then the same problem arises.

Putting two notebooks together to give a double deck appearance runs into the issue that there has to be an active tab in each notebook. Hence this extra "down arrow" tab which is supposed to indicate that the top notebook has overflowed down to the bottom notebook. Clicking it does nothing because its already the current entry.
Comment 5 Caolán McNamara 2019-01-16 12:39:54 UTC
I may be able to css theme it into invisibility, at least on >= 3.20 gtk
Comment 6 Hussam Al-Tayeb 2019-01-16 13:08:54 UTC
(In reply to Caolán McNamara from comment #5)
> I may be able to css theme it into invisibility, at least on >= 3.20 gtk

Awesome. Thank you!
Comment 7 Commit Notification 2019-01-16 16:27:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/2cf3b1709203931dc6defd5af67e3feecda4895a%5E%21

Resolves: tdf#122623 theme unwanted tab into invisibility

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2019-01-16 16:51:43 UTC
on fedora 29 with adwaita, ambiance, numux this seems to work fine. Also tested ubuntu 16.04 with ambiance and radiance it also seems to work as hoped
Comment 9 Hussam Al-Tayeb 2019-01-16 18:25:29 UTC
I'll apply the patch to my local 6-2 tree. Thank you very much for the fix!
Comment 10 Xisco Faulí 2019-01-17 12:38:24 UTC
Created attachment 148398 [details]
How it looks in LibreOffice 6.3 Master with gtk 3.18.9
Comment 11 Xisco Faulí 2019-01-17 12:38:44 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 5e89aad61e143ad6a52291ef7065f5b22e348c85
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this!
Comment 12 Commit Notification 2019-01-17 12:42:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/2e0f991f2eb57c0c25f32f759853195f9764a529%5E%21

Resolves: tdf#122623 theme unwanted tab into invisibility

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.