Resolves: tdf#122623 theme unwanted tab into invisibility

its nigh impossible to have a GtkNotebook without an active tab, so
try and theme it into invisibility with no width

Change-Id: I312b81ae51abe9fdd222fb5d5c45cb41603b80cb
Reviewed-on: https://gerrit.libreoffice.org/66443
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>